--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -79,9 +79,37 @@ jobs:
         git config user.name "GitHub Actions"
         git config user.email "actions@github.com"
         git remote set-url origin https://${GITHUB_TOKEN}@github.com/kalpanavasava/demo_project_cicd.git
+        
+      # Remove old coverage report files
+        if [ -d "artifacts-coverage-report" ]; then
+          git rm -r --cached artifacts-coverage-report/ || true
+          rm -rf artifacts-coverage-report/
+        fi
+        
+      # Copy new coverage report files
+        cp -r artifacts-coverage-report-new/ artifacts-coverage-report/
+
+      # Pull the latest changes from the remote repository
+        git pull origin main --rebase
+        
+      # Add and commit new coverage report files
         git add artifacts-coverage-report/
-        git commit -m "Add code coverage report [skip ci]"
-        git push
+        git commit -m "Add updated code coverage report [skip ci]"
+
+      # Push changes to the remote repository
+        git push origin main
+
+    # - name: Commit and Push Coverage Report to Repository
+    #   if: success()
+    #   env:
+    #     GITHUB_TOKEN: ${{ secrets.TOKEN }}
+    #   run: |
+    #     git config user.name "GitHub Actions"
+    #     git config user.email "actions@github.com"
+    #     git remote set-url origin https://${GITHUB_TOKEN}@github.com/kalpanavasava/demo_project_cicd.git
+    #     git add artifacts-coverage-report/
+    #     git commit -m "Add code coverage report [skip ci]"
+    #     git push
 
   # web-deploy:
   #   name: Deploy
