--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,17 +10,23 @@ jobs:
     name: Build and Test
     runs-on: ubuntu-latest
 
-    services:
-      mysql:
-        image: mysql:8.0
-        env:
-          # MYSQL_ROOT_PASSWORD: ""  
-          MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
-          MYSQL_DATABASE: demo_project_cicd
-        ports:
-          - 3306:3306
-        options: --health-cmd="mysqladmin ping -h localhost --silent" --health-interval=5s --health-timeout=3s --health-retries=3
-        
+    # services:
+    #   mysql:
+    #     image: mysql:8.0
+    #     env:
+    #       # MYSQL_ROOT_PASSWORD: ""  
+    #       MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
+    #       MYSQL_DATABASE: demo_project_cicd
+    #     ports:
+    #       - 3306:3306
+    #     options: --health-cmd="mysqladmin ping -h localhost --silent" --health-interval=5s --health-timeout=3s --health-retries=3
+
+    env:
+      DB_HOST: ${{ secrets.DB_HOST }}      
+      DB_USER: ${{ secrets.DB_USER }}      
+      DB_PASSWORD: ${{ secrets.DB_PASSWORD }} 
+      DB_NAME: ${{ secrets.DB_NAME }}
+
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
@@ -114,22 +120,22 @@ jobs:
     #     git commit -m "Add code coverage report [skip ci]"
     #     git push
 
-  # web-deploy:
-  #   name: Deploy
-  #   needs: web-build
-  #   runs-on: ubuntu-latest
+  web-deploy:
+    name: Deploy
+    needs: web-build
+    runs-on: ubuntu-latest
 
-  #   steps:
-  #   - name: Get latest code
-  #     uses: actions/checkout@v2
+    steps:
+    - name: Get latest code
+      uses: actions/checkout@v2
 
-  #   - name: Sync files to server
-  #     uses: SamKirkland/FTP-Deploy-Action@v4.3.5
-  #     with:
-  #       server: ${{ secrets.ftp_server }}
-  #       username: ${{ secrets.ftp_username }}
-  #       password: ${{ secrets.ftp_password }}
-  #       server_dir: /public_html/demo_project_cicd/
-  #       ftp_options: |
-  #         --dry-run   # Run a dry-run to test without actually uploading anything.
-  #         --verbose   # Log more detailed information for debugging.
+    - name: Sync files to server
+      uses: SamKirkland/FTP-Deploy-Action@v4.3.5
+      with:
+        server: ${{ secrets.ftp_server }}
+        username: ${{ secrets.ftp_username }}
+        password: ${{ secrets.ftp_password }}
+        server_dir: /public_html/demo_project_cicd/
+        ftp_options: |
+          --dry-run   # Run a dry-run to test without actually uploading anything.
+          --verbose   # Log more detailed information for debugging.
