--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,24 +3,12 @@ name: Deploy website on push
 on:
   push:
     branches:
-      - main  # Deploy when changes are pushed to the main branch
+      - main
 
 jobs:
   web-build:
     name: Build and Test
     runs-on: ubuntu-latest
-
-    # services:
-    #   mysql:
-    #     image: mysql:8.0
-    #     env:
-    #       # MYSQL_ROOT_PASSWORD: ""  
-    #       MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
-    #       MYSQL_DATABASE: demo_project_cicd
-    #     ports:
-    #       - 3306:3306
-    #     options: --health-cmd="mysqladmin ping -h localhost --silent" --health-interval=5s --health-timeout=3s --health-retries=3
-
     env:
       DB_HOST: ${{ secrets.DB_HOST }}      
       DB_USER: ${{ secrets.DB_USER }}      
@@ -56,7 +44,6 @@ jobs:
       run: |
         chmod +x vendor/bin/phpunit  
 
-    # Check syntax for each PHP file and stop on the first error
     - name: Validate PHP syntax for all PHP files
       run: |
         echo "Checking PHP syntax for all PHP files..."
@@ -83,11 +70,10 @@ jobs:
       run: |
         mkdir -p artifacts-coverage-report
         vendor/bin/phpunit --configuration phpunit.xml --coverage-clover artifacts-coverage-report/coverage-report.xml --stop-on-failure || exit 1
-        # vendor/bin/phpunit --configuration phpunit.xml --coverage-html artifacts-coverage-report/html --stop-on-failure || exit 1
 
     - name: Generate and Download Coverage Report
       run: |
-        php custom-script/generate_coverage_report.php
+        php public/custom-script/generate_coverage_report.php
 
     - name: Upload code coverage report
       if: success()
@@ -108,18 +94,6 @@ jobs:
         git commit -m "Add code coverage report [skip ci]"
         git push 
 
-    # - name: Commit and Push Coverage Report to Repository
-    #   if: success()
-    #   env:
-    #     GITHUB_TOKEN: ${{ secrets.TOKEN }}
-    #   run: |
-    #     git config user.name "GitHub Actions"
-    #     git config user.email "actions@github.com"
-    #     git remote set-url origin https://${GITHUB_TOKEN}@github.com/kalpanavasava/demo_project_cicd.git
-    #     git add artifacts-coverage-report/
-    #     git commit -m "Add code coverage report [skip ci]"
-    #     git push
-
   web-deploy:
     name: Deploy
     needs: web-build
@@ -136,6 +110,7 @@ jobs:
         username: ${{ secrets.ftp_username }}
         password: ${{ secrets.ftp_password }}
         server_dir: /public_html/demo_project_cicd/
+        local_dir: ./  # Local directory to deploy
         ftp_options: |
           --dry-run   # Run a dry-run to test without actually uploading anything.
           --verbose   # Log more detailed information for debugging.
