--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,6 +58,10 @@ jobs:
     - name: List tests
       run: vendor/bin/phpunit --configuration phpunit.xml --list-tests
 
+    - name: Test MySQL Connection
+      run: |
+        mysql -h"${{ secrets.DB_HOST }}" -u"${{ secrets.DB_USER }}" -p"${{ secrets.DB_PASSWORD }}" -e "SHOW DATABASES;"
+
     - name: Wait for MySQL to be ready (with timeout)
       run: |
         MAX_TRIES=60
