--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,15 +7,19 @@ on:
 
 jobs:
   web-build:
-    name: Build and Test
     runs-on: ubuntu-latest
     env:
-      DB_HOST: ${{ secrets.DB_HOST }}      
-      DB_USER: ${{ secrets.DB_USER }}      
-      DB_PASSWORD: ${{ secrets.DB_PASSWORD }} 
+      DB_HOST: ${{ secrets.DB_HOST }}
+      DB_USER: ${{ secrets.DB_USER }}
+      DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
       DB_NAME: ${{ secrets.DB_NAME }}
 
     steps:
+    - name: Test MySQL Connection
+      run: |
+        echo "Testing MySQL connection..."
+        mysql -h"${DB_HOST}" -u"${DB_USER}" -p"${DB_PASSWORD}" -e "SHOW DATABASES;"
+
     - name: Checkout repository
       uses: actions/checkout@v2
 
@@ -57,11 +61,6 @@ jobs:
 
     - name: List tests
       run: vendor/bin/phpunit --configuration phpunit.xml --list-tests
-
-    - name: Test MySQL Connection
-      run: |
-        echo "Testing MySQL connection..."
-        mysql -h"${{ secrets.DB_HOST }}" -u"${{ secrets.DB_USER }}" -p"${{ secrets.DB_PASSWORD }}" -e "SHOW DATABASES;"
 
     - name: Wait for MySQL to be ready (with timeout)
       run: |
